# apkutils

./: .bumpversion.cfg  .gitignore  .readthedocs.yaml  CHANGELOG.md  LICENSE  LICENSE.txt  Makefile  README.en.md  README.md  README.rst  pyproject.toml  requirements_dev.txt  requirment.txt  setup.cfg  setup.py  test_axml.py  tox.ini
apkutils/: __init__.py  __main__.py  apk.py  apkfile.py  cert.py  cli.py  gdiff.py  intersection.py  wildcard.py
apkutils/axml/: __init__.py  arscparser.py  axmlparser.py  bytecode.py  chunk.py  public.py  types.py
apkutils/dex/: byteio.py  dalvik.py  dalvikformats.py  dexparser.py  mutf8.py  setup.py  treelist.py  util.py
apkutils/elf/: elfparser.py
apkutils/gui/: __main__.py
data/: test  test_zip_fake_pwd
docs/: Makefile  apkutils.axml.rst  apkutils.dex.jvm.constants.rst  apkutils.dex.jvm.optimization.rst  apkutils.dex.jvm.rst  apkutils.dex.rst  apkutils.dex.typeinference.rst  apkutils.elf.rst  apkutils.rst  conf.py  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  usage.rst
examples/: arsc.py  cert.py  files.py  manifest.py  mtd.py  strings.py  youtube.py
src/apkutils/: __main__.py  apk.py  cli.py
src/apkutils/axml/: __init__.py  axmlparser.py  chunk.py
src/apkutils/dex/: byteio.py  dexparser.py
src/apkutils/elf/: elfparser.py
src/apkutils/test/: test_apk.py  test_arsc.py  test_axml.py
tests/: __init__.py  test_apk.py  test_apk_fake_pwd.py  test_arsc.py  test_arsc_youtube.py  test_benchmark.py  test_certs.py  test_i15.py  test_strings_refx.py  test_youtube.py
