[tool.poetry]
authors = ["kin9-0rz <kin9-0rz@outlook.com>"]
classifiers = [
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Natural Language :: Chinese (Simplified)",
  "Development Status :: 3 - Alpha",
]
description = "一个APK解析库"
license = "MIT"
name = "apkutils"
repository = "https://gitee.com/kin9-0rz/apkutils"
version = "1.5.2"
readme = "README.md"

[tool.poetry.dependencies]
Pygments = "^2.12.0"
beautifulsoup4 = "^4.10.0"
click = "^8.0.3"
cryptography = ">=39.0.1"
lxml = "^4.6.4"
pyelftools = "^0.27"
pyftype = "^1.2.4"
python = ">=3.8"
colorlog = "^6.7.0"

[tool.poetry.dev-dependencies]
black = { version = "^22.3.0", allow-prereleases = true }
poetry2setup = "^1.0.0"
pytest = "^6.2.5"
pytest-benchmark = "^3.4.1"
tox = "^3.24.4"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.poetry.scripts]
apkutils = "apkutils.cli:main"
