[project]
name = "apkutils"
version = "2.0.5"
description = "一个APK解析库"
readme = "README.md"
authors = [{ name = "kin9-0rz", email = "kin9-0rz@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
  "Pygments>=2.12.0,<3.0.0",
  "beautifulsoup4>=4.10.0,<5.0.0",
  "click>=8.0.3,<9.0.0",
  "cryptography>=39.0.1",
  "lxml>=5.0.0",
  "pyelftools>=0.27,<0.28",
  "pyftype>=1.2.4,<2.0.0",
  "colorlog>=6.7.0,<7.0.0",
]

[project.urls]
Repository = "https://gitee.com/kin9-0rz/apkutils"

[project.scripts]
apkutils = 'apkutils.cli:main'

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-benchmark>=5.2.3"]
